fix(checkbox & radio): fix vertical align problem

--- a/src/styles/components/_checkbox.scss
+++ b/src/styles/components/_checkbox.scss
@@ -16,12 +16,15 @@
     width: $checkbox-icon-width;
     height: $checkbox-icon-height;
     margin-right: $checkbox-icon-margin-right;
-    vertical-align: text-top;
     background: transparent;
     border-color: $checkbox-border-color;
     border-style: solid;
     border-width: $checkbox-border-width;
     border-radius: $checkbox-border-radius;
+  }
+
+  &__label {
+    vertical-align: top;
   }
 
   &__input:checked + &__icon {
